<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.android.monsoursaleh.missionalarm.AlarmsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cancel_button"
                android:text="@android:string/cancel"
                android:textColor="@color/design_default_color_surface"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:id="@+id/delete_button"
                android:textColor="@color/design_default_color_surface"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok"
                android:id="@+id/ok_button"
                android:textColor="@color/design_default_color_surface"/>

        </LinearLayout>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label"
            android:id="@+id/text_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_info"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/choose_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:text="@string/hint_days"
                        tools:text="Choose Days"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleLine="true">

                            <!-- Chips will be dynamically added. -->

                        </com.google.android.material.chip.ChipGroup>

                    </HorizontalScrollView>

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    tools:layout_editor_absoluteX="0dp" />


                <LinearLayout
                    android:id="@+id/alarm_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_alarm_sound"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:text="@string/none"
                        tools:text="Chosen Sound"
                        android:id="@+id/sound_name"/>
                </LinearLayout>

                <View
                    android:id="@+id/divider_3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    tools:layout_editor_absoluteX="16dp" />

                <LinearLayout
                    android:id="@+id/choose_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_vibrate"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/toggle_vibrate"
                        android:checked="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:text="@string/off"
                        tools:text="Off" />

                </LinearLayout>

                <View
                    android:id="@+id/divider_4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>

                <LinearLayout
                    android:id="@+id/snooze"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_snooze"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/toggle_snooze"
                        android:checked="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:text="@string/off"
                        tools:text="# minutes" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>